--- a/GestorFinanceiro/appsettings.Development.json
+++ b/GestorFinanceiro/appsettings.Development.json
@@ -1,9 +1,13 @@
 {
+  "Postgres": {
+    "ConnectionString": "Server=localhost;Port=15432;Database=finance;User Id=postgres;Password=Postgres2021!;Timeout=15;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+  "SecretKey": "fedaf7d8863b48e197b9287d492b708e"
 }
